Quick update to the html file with my info

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <h1><strong>Student Bio</strong></h1>
 </head>
+
 <body>
-    <h1>This is the first commit to my portfolio</h1>
-    
+    <section>
+    <h2><strong>Luke Evans</strong></h2>
+
+    <img src="https://placehold.it/200x200" alt="Your name">
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vestibulum dui id nibh dignissim blandit. Sed
+        feugiat tempus purus, quis accumsan felis auctor suscipit. Nulla erat eros, maximus non enim et, tempor
+        malesuada nisi. Aenean pharetra finibus nibh, congue mattis velit hendrerit nec. In vulputate, nulla eget
+        euismod pellentesque, quam urna varius enim, at vestibulum libero risus vel arcu. Vivamus sit amet orci cursus,
+        imperdiet felis eu, consectetur massa. Quisque at dui elit.</p>
+    </section>
+
+        <h3><strong>Contact Info</strong></h3>
+
+        <ul>
+            <li><strong>Email:</strong> <a href="LukeEvansTax@gmail.com">lukeevanstax@gmail.com</a></li>
+            <li><strong>Github:</strong> <a href="https://github.com/TheWintersFox">https://github.com/TheWintersFox</a></li>
+            <li><strong>Portfolio</strong> <a href="coming soon">coming soon</a></li>
+        </ul>
+
 </body>
+
 </html>
